--- a/config.php.sample
+++ b/config.php.sample
@@ -14,6 +14,6 @@ CREATE TABLE IF NOT EXISTS `dbtable` (
   PRIMARY KEY (`id`),
   UNIQUE KEY `token-field` (`token-field`),
   KEY `token` (`token`)
-) ENGINE=InnoDB  DEFAULT CHARSET=latin1 AUTO_INCREMENT=340 ;
+) ENGINE=InnoDB  DEFAULT CHARSET=utf8 ;
 */
 ?>
